Apply some inspect suggestions on 2024